--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1441,6 +1441,10 @@ section.lazy-placeholder:after {
 .cid-s5dLX3UWVr .collapsed .navbar-collapse.show .navbar-nav .nav-item {
   clear: both;
 }
+.cid-s5dLX3UWVr .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+.cid-s5dLX3UWVr .collapsed .navbar-collapse.show .navbar-nav .nav-item:last-child {
+  margin-bottom: 1rem;
+}
 .cid-s5dLX3UWVr .collapsed .navbar-collapse.collapsing .navbar-buttons,
 .cid-s5dLX3UWVr .collapsed .navbar-collapse.show .navbar-buttons {
   text-align: center;
@@ -1541,6 +1545,10 @@ section.lazy-placeholder:after {
   .cid-s5dLX3UWVr .navbar-collapse.collapsing .navbar-nav .nav-item,
   .cid-s5dLX3UWVr .navbar-collapse.show .navbar-nav .nav-item {
     clear: both;
+  }
+  .cid-s5dLX3UWVr .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+  .cid-s5dLX3UWVr .navbar-collapse.show .navbar-nav .nav-item:last-child {
+    margin-bottom: 1rem;
   }
   .cid-s5dLX3UWVr .navbar-collapse.collapsing .navbar-buttons,
   .cid-s5dLX3UWVr .navbar-collapse.show .navbar-buttons {
@@ -1984,6 +1992,10 @@ section.lazy-placeholder:after {
 .cid-s5dLX3UWVr .collapsed .navbar-collapse.show .navbar-nav .nav-item {
   clear: both;
 }
+.cid-s5dLX3UWVr .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+.cid-s5dLX3UWVr .collapsed .navbar-collapse.show .navbar-nav .nav-item:last-child {
+  margin-bottom: 1rem;
+}
 .cid-s5dLX3UWVr .collapsed .navbar-collapse.collapsing .navbar-buttons,
 .cid-s5dLX3UWVr .collapsed .navbar-collapse.show .navbar-buttons {
   text-align: center;
@@ -2084,6 +2096,10 @@ section.lazy-placeholder:after {
   .cid-s5dLX3UWVr .navbar-collapse.collapsing .navbar-nav .nav-item,
   .cid-s5dLX3UWVr .navbar-collapse.show .navbar-nav .nav-item {
     clear: both;
+  }
+  .cid-s5dLX3UWVr .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+  .cid-s5dLX3UWVr .navbar-collapse.show .navbar-nav .nav-item:last-child {
+    margin-bottom: 1rem;
   }
   .cid-s5dLX3UWVr .navbar-collapse.collapsing .navbar-buttons,
   .cid-s5dLX3UWVr .navbar-collapse.show .navbar-buttons {
@@ -2467,6 +2483,10 @@ section.lazy-placeholder:after {
 .cid-s5dLX3UWVr .collapsed .navbar-collapse.show .navbar-nav .nav-item {
   clear: both;
 }
+.cid-s5dLX3UWVr .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+.cid-s5dLX3UWVr .collapsed .navbar-collapse.show .navbar-nav .nav-item:last-child {
+  margin-bottom: 1rem;
+}
 .cid-s5dLX3UWVr .collapsed .navbar-collapse.collapsing .navbar-buttons,
 .cid-s5dLX3UWVr .collapsed .navbar-collapse.show .navbar-buttons {
   text-align: center;
@@ -2567,6 +2587,10 @@ section.lazy-placeholder:after {
   .cid-s5dLX3UWVr .navbar-collapse.collapsing .navbar-nav .nav-item,
   .cid-s5dLX3UWVr .navbar-collapse.show .navbar-nav .nav-item {
     clear: both;
+  }
+  .cid-s5dLX3UWVr .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+  .cid-s5dLX3UWVr .navbar-collapse.show .navbar-nav .nav-item:last-child {
+    margin-bottom: 1rem;
   }
   .cid-s5dLX3UWVr .navbar-collapse.collapsing .navbar-buttons,
   .cid-s5dLX3UWVr .navbar-collapse.show .navbar-buttons {
@@ -2943,6 +2967,10 @@ section.lazy-placeholder:after {
 .cid-s5vrmH8qq7 .collapsed .navbar-collapse.show .navbar-nav .nav-item {
   clear: both;
 }
+.cid-s5vrmH8qq7 .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+.cid-s5vrmH8qq7 .collapsed .navbar-collapse.show .navbar-nav .nav-item:last-child {
+  margin-bottom: 1rem;
+}
 .cid-s5vrmH8qq7 .collapsed .navbar-collapse.collapsing .navbar-buttons,
 .cid-s5vrmH8qq7 .collapsed .navbar-collapse.show .navbar-buttons {
   text-align: center;
@@ -3043,6 +3071,10 @@ section.lazy-placeholder:after {
   .cid-s5vrmH8qq7 .navbar-collapse.collapsing .navbar-nav .nav-item,
   .cid-s5vrmH8qq7 .navbar-collapse.show .navbar-nav .nav-item {
     clear: both;
+  }
+  .cid-s5vrmH8qq7 .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+  .cid-s5vrmH8qq7 .navbar-collapse.show .navbar-nav .nav-item:last-child {
+    margin-bottom: 1rem;
   }
   .cid-s5vrmH8qq7 .navbar-collapse.collapsing .navbar-buttons,
   .cid-s5vrmH8qq7 .navbar-collapse.show .navbar-buttons {
@@ -3428,6 +3460,10 @@ section.lazy-placeholder:after {
 .cid-s5vDSg6pNM .collapsed .navbar-collapse.show .navbar-nav .nav-item {
   clear: both;
 }
+.cid-s5vDSg6pNM .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+.cid-s5vDSg6pNM .collapsed .navbar-collapse.show .navbar-nav .nav-item:last-child {
+  margin-bottom: 1rem;
+}
 .cid-s5vDSg6pNM .collapsed .navbar-collapse.collapsing .navbar-buttons,
 .cid-s5vDSg6pNM .collapsed .navbar-collapse.show .navbar-buttons {
   text-align: center;
@@ -3528,6 +3564,10 @@ section.lazy-placeholder:after {
   .cid-s5vDSg6pNM .navbar-collapse.collapsing .navbar-nav .nav-item,
   .cid-s5vDSg6pNM .navbar-collapse.show .navbar-nav .nav-item {
     clear: both;
+  }
+  .cid-s5vDSg6pNM .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+  .cid-s5vDSg6pNM .navbar-collapse.show .navbar-nav .nav-item:last-child {
+    margin-bottom: 1rem;
   }
   .cid-s5vDSg6pNM .navbar-collapse.collapsing .navbar-buttons,
   .cid-s5vDSg6pNM .navbar-collapse.show .navbar-buttons {
@@ -3904,6 +3944,10 @@ section.lazy-placeholder:after {
 .cid-s5vOVg7NfE .collapsed .navbar-collapse.show .navbar-nav .nav-item {
   clear: both;
 }
+.cid-s5vOVg7NfE .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+.cid-s5vOVg7NfE .collapsed .navbar-collapse.show .navbar-nav .nav-item:last-child {
+  margin-bottom: 1rem;
+}
 .cid-s5vOVg7NfE .collapsed .navbar-collapse.collapsing .navbar-buttons,
 .cid-s5vOVg7NfE .collapsed .navbar-collapse.show .navbar-buttons {
   text-align: center;
@@ -4004,6 +4048,10 @@ section.lazy-placeholder:after {
   .cid-s5vOVg7NfE .navbar-collapse.collapsing .navbar-nav .nav-item,
   .cid-s5vOVg7NfE .navbar-collapse.show .navbar-nav .nav-item {
     clear: both;
+  }
+  .cid-s5vOVg7NfE .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+  .cid-s5vOVg7NfE .navbar-collapse.show .navbar-nav .nav-item:last-child {
+    margin-bottom: 1rem;
   }
   .cid-s5vOVg7NfE .navbar-collapse.collapsing .navbar-buttons,
   .cid-s5vOVg7NfE .navbar-collapse.show .navbar-buttons {
@@ -4385,6 +4433,10 @@ section.lazy-placeholder:after {
 .cid-s5RkCu3oIx .collapsed .navbar-collapse.show .navbar-nav .nav-item {
   clear: both;
 }
+.cid-s5RkCu3oIx .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+.cid-s5RkCu3oIx .collapsed .navbar-collapse.show .navbar-nav .nav-item:last-child {
+  margin-bottom: 1rem;
+}
 .cid-s5RkCu3oIx .collapsed .navbar-collapse.collapsing .navbar-buttons,
 .cid-s5RkCu3oIx .collapsed .navbar-collapse.show .navbar-buttons {
   text-align: center;
@@ -4485,6 +4537,10 @@ section.lazy-placeholder:after {
   .cid-s5RkCu3oIx .navbar-collapse.collapsing .navbar-nav .nav-item,
   .cid-s5RkCu3oIx .navbar-collapse.show .navbar-nav .nav-item {
     clear: both;
+  }
+  .cid-s5RkCu3oIx .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+  .cid-s5RkCu3oIx .navbar-collapse.show .navbar-nav .nav-item:last-child {
+    margin-bottom: 1rem;
   }
   .cid-s5RkCu3oIx .navbar-collapse.collapsing .navbar-buttons,
   .cid-s5RkCu3oIx .navbar-collapse.show .navbar-buttons {
@@ -4861,6 +4917,10 @@ section.lazy-placeholder:after {
 .cid-s5dLX3UWVr .collapsed .navbar-collapse.show .navbar-nav .nav-item {
   clear: both;
 }
+.cid-s5dLX3UWVr .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+.cid-s5dLX3UWVr .collapsed .navbar-collapse.show .navbar-nav .nav-item:last-child {
+  margin-bottom: 1rem;
+}
 .cid-s5dLX3UWVr .collapsed .navbar-collapse.collapsing .navbar-buttons,
 .cid-s5dLX3UWVr .collapsed .navbar-collapse.show .navbar-buttons {
   text-align: center;
@@ -4961,6 +5021,10 @@ section.lazy-placeholder:after {
   .cid-s5dLX3UWVr .navbar-collapse.collapsing .navbar-nav .nav-item,
   .cid-s5dLX3UWVr .navbar-collapse.show .navbar-nav .nav-item {
     clear: both;
+  }
+  .cid-s5dLX3UWVr .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+  .cid-s5dLX3UWVr .navbar-collapse.show .navbar-nav .nav-item:last-child {
+    margin-bottom: 1rem;
   }
   .cid-s5dLX3UWVr .navbar-collapse.collapsing .navbar-buttons,
   .cid-s5dLX3UWVr .navbar-collapse.show .navbar-buttons {
@@ -5437,6 +5501,10 @@ section.lazy-placeholder:after {
 .cid-s5dLX3UWVr .collapsed .navbar-collapse.show .navbar-nav .nav-item {
   clear: both;
 }
+.cid-s5dLX3UWVr .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+.cid-s5dLX3UWVr .collapsed .navbar-collapse.show .navbar-nav .nav-item:last-child {
+  margin-bottom: 1rem;
+}
 .cid-s5dLX3UWVr .collapsed .navbar-collapse.collapsing .navbar-buttons,
 .cid-s5dLX3UWVr .collapsed .navbar-collapse.show .navbar-buttons {
   text-align: center;
@@ -5537,6 +5605,10 @@ section.lazy-placeholder:after {
   .cid-s5dLX3UWVr .navbar-collapse.collapsing .navbar-nav .nav-item,
   .cid-s5dLX3UWVr .navbar-collapse.show .navbar-nav .nav-item {
     clear: both;
+  }
+  .cid-s5dLX3UWVr .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+  .cid-s5dLX3UWVr .navbar-collapse.show .navbar-nav .nav-item:last-child {
+    margin-bottom: 1rem;
   }
   .cid-s5dLX3UWVr .navbar-collapse.collapsing .navbar-buttons,
   .cid-s5dLX3UWVr .navbar-collapse.show .navbar-buttons {
@@ -5904,6 +5976,10 @@ section.lazy-placeholder:after {
 .cid-sciwT8oW3U .collapsed .navbar-collapse.show .navbar-nav .nav-item {
   clear: both;
 }
+.cid-sciwT8oW3U .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+.cid-sciwT8oW3U .collapsed .navbar-collapse.show .navbar-nav .nav-item:last-child {
+  margin-bottom: 1rem;
+}
 .cid-sciwT8oW3U .collapsed .navbar-collapse.collapsing .navbar-buttons,
 .cid-sciwT8oW3U .collapsed .navbar-collapse.show .navbar-buttons {
   text-align: center;
@@ -6004,6 +6080,10 @@ section.lazy-placeholder:after {
   .cid-sciwT8oW3U .navbar-collapse.collapsing .navbar-nav .nav-item,
   .cid-sciwT8oW3U .navbar-collapse.show .navbar-nav .nav-item {
     clear: both;
+  }
+  .cid-sciwT8oW3U .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+  .cid-sciwT8oW3U .navbar-collapse.show .navbar-nav .nav-item:last-child {
+    margin-bottom: 1rem;
   }
   .cid-sciwT8oW3U .navbar-collapse.collapsing .navbar-buttons,
   .cid-sciwT8oW3U .navbar-collapse.show .navbar-buttons {
@@ -6421,6 +6501,10 @@ section.lazy-placeholder:after {
 .cid-scitFHR8Qo .collapsed .navbar-collapse.show .navbar-nav .nav-item {
   clear: both;
 }
+.cid-scitFHR8Qo .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+.cid-scitFHR8Qo .collapsed .navbar-collapse.show .navbar-nav .nav-item:last-child {
+  margin-bottom: 1rem;
+}
 .cid-scitFHR8Qo .collapsed .navbar-collapse.collapsing .navbar-buttons,
 .cid-scitFHR8Qo .collapsed .navbar-collapse.show .navbar-buttons {
   text-align: center;
@@ -6521,6 +6605,10 @@ section.lazy-placeholder:after {
   .cid-scitFHR8Qo .navbar-collapse.collapsing .navbar-nav .nav-item,
   .cid-scitFHR8Qo .navbar-collapse.show .navbar-nav .nav-item {
     clear: both;
+  }
+  .cid-scitFHR8Qo .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+  .cid-scitFHR8Qo .navbar-collapse.show .navbar-nav .nav-item:last-child {
+    margin-bottom: 1rem;
   }
   .cid-scitFHR8Qo .navbar-collapse.collapsing .navbar-buttons,
   .cid-scitFHR8Qo .navbar-collapse.show .navbar-buttons {
@@ -7200,6 +7288,10 @@ section.lazy-placeholder:after {
 .cid-scru2wV8Nz .collapsed .navbar-collapse.show .navbar-nav .nav-item {
   clear: both;
 }
+.cid-scru2wV8Nz .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+.cid-scru2wV8Nz .collapsed .navbar-collapse.show .navbar-nav .nav-item:last-child {
+  margin-bottom: 1rem;
+}
 .cid-scru2wV8Nz .collapsed .navbar-collapse.collapsing .navbar-buttons,
 .cid-scru2wV8Nz .collapsed .navbar-collapse.show .navbar-buttons {
   text-align: center;
@@ -7300,6 +7392,10 @@ section.lazy-placeholder:after {
   .cid-scru2wV8Nz .navbar-collapse.collapsing .navbar-nav .nav-item,
   .cid-scru2wV8Nz .navbar-collapse.show .navbar-nav .nav-item {
     clear: both;
+  }
+  .cid-scru2wV8Nz .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+  .cid-scru2wV8Nz .navbar-collapse.show .navbar-nav .nav-item:last-child {
+    margin-bottom: 1rem;
   }
   .cid-scru2wV8Nz .navbar-collapse.collapsing .navbar-buttons,
   .cid-scru2wV8Nz .navbar-collapse.show .navbar-buttons {
@@ -8335,6 +8431,10 @@ section.lazy-placeholder:after {
 .cid-sfSTl2HIKK .collapsed .navbar-collapse.show .navbar-nav .nav-item {
   clear: both;
 }
+.cid-sfSTl2HIKK .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+.cid-sfSTl2HIKK .collapsed .navbar-collapse.show .navbar-nav .nav-item:last-child {
+  margin-bottom: 1rem;
+}
 .cid-sfSTl2HIKK .collapsed .navbar-collapse.collapsing .navbar-buttons,
 .cid-sfSTl2HIKK .collapsed .navbar-collapse.show .navbar-buttons {
   text-align: center;
@@ -8435,6 +8535,10 @@ section.lazy-placeholder:after {
   .cid-sfSTl2HIKK .navbar-collapse.collapsing .navbar-nav .nav-item,
   .cid-sfSTl2HIKK .navbar-collapse.show .navbar-nav .nav-item {
     clear: both;
+  }
+  .cid-sfSTl2HIKK .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+  .cid-sfSTl2HIKK .navbar-collapse.show .navbar-nav .nav-item:last-child {
+    margin-bottom: 1rem;
   }
   .cid-sfSTl2HIKK .navbar-collapse.collapsing .navbar-buttons,
   .cid-sfSTl2HIKK .navbar-collapse.show .navbar-buttons {
@@ -9208,6 +9312,10 @@ section.lazy-placeholder:after {
 .cid-s5dLX3UWVr .collapsed .navbar-collapse.show .navbar-nav .nav-item {
   clear: both;
 }
+.cid-s5dLX3UWVr .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+.cid-s5dLX3UWVr .collapsed .navbar-collapse.show .navbar-nav .nav-item:last-child {
+  margin-bottom: 1rem;
+}
 .cid-s5dLX3UWVr .collapsed .navbar-collapse.collapsing .navbar-buttons,
 .cid-s5dLX3UWVr .collapsed .navbar-collapse.show .navbar-buttons {
   text-align: center;
@@ -9308,6 +9416,10 @@ section.lazy-placeholder:after {
   .cid-s5dLX3UWVr .navbar-collapse.collapsing .navbar-nav .nav-item,
   .cid-s5dLX3UWVr .navbar-collapse.show .navbar-nav .nav-item {
     clear: both;
+  }
+  .cid-s5dLX3UWVr .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+  .cid-s5dLX3UWVr .navbar-collapse.show .navbar-nav .nav-item:last-child {
+    margin-bottom: 1rem;
   }
   .cid-s5dLX3UWVr .navbar-collapse.collapsing .navbar-buttons,
   .cid-s5dLX3UWVr .navbar-collapse.show .navbar-buttons {
@@ -9741,6 +9853,10 @@ section.lazy-placeholder:after {
 .cid-smgrL1uis0 .collapsed .navbar-collapse.show .navbar-nav .nav-item {
   clear: both;
 }
+.cid-smgrL1uis0 .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+.cid-smgrL1uis0 .collapsed .navbar-collapse.show .navbar-nav .nav-item:last-child {
+  margin-bottom: 1rem;
+}
 .cid-smgrL1uis0 .collapsed .navbar-collapse.collapsing .navbar-buttons,
 .cid-smgrL1uis0 .collapsed .navbar-collapse.show .navbar-buttons {
   text-align: center;
@@ -9841,6 +9957,10 @@ section.lazy-placeholder:after {
   .cid-smgrL1uis0 .navbar-collapse.collapsing .navbar-nav .nav-item,
   .cid-smgrL1uis0 .navbar-collapse.show .navbar-nav .nav-item {
     clear: both;
+  }
+  .cid-smgrL1uis0 .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+  .cid-smgrL1uis0 .navbar-collapse.show .navbar-nav .nav-item:last-child {
+    margin-bottom: 1rem;
   }
   .cid-smgrL1uis0 .navbar-collapse.collapsing .navbar-buttons,
   .cid-smgrL1uis0 .navbar-collapse.show .navbar-buttons {
@@ -10280,6 +10400,10 @@ section.lazy-placeholder:after {
 .cid-smgrL1uis0 .collapsed .navbar-collapse.show .navbar-nav .nav-item {
   clear: both;
 }
+.cid-smgrL1uis0 .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+.cid-smgrL1uis0 .collapsed .navbar-collapse.show .navbar-nav .nav-item:last-child {
+  margin-bottom: 1rem;
+}
 .cid-smgrL1uis0 .collapsed .navbar-collapse.collapsing .navbar-buttons,
 .cid-smgrL1uis0 .collapsed .navbar-collapse.show .navbar-buttons {
   text-align: center;
@@ -10380,6 +10504,10 @@ section.lazy-placeholder:after {
   .cid-smgrL1uis0 .navbar-collapse.collapsing .navbar-nav .nav-item,
   .cid-smgrL1uis0 .navbar-collapse.show .navbar-nav .nav-item {
     clear: both;
+  }
+  .cid-smgrL1uis0 .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+  .cid-smgrL1uis0 .navbar-collapse.show .navbar-nav .nav-item:last-child {
+    margin-bottom: 1rem;
   }
   .cid-smgrL1uis0 .navbar-collapse.collapsing .navbar-buttons,
   .cid-smgrL1uis0 .navbar-collapse.show .navbar-buttons {
@@ -11073,6 +11201,10 @@ section.lazy-placeholder:after {
 .cid-sqZRD2kuAH .collapsed .navbar-collapse.show .navbar-nav .nav-item {
   clear: both;
 }
+.cid-sqZRD2kuAH .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+.cid-sqZRD2kuAH .collapsed .navbar-collapse.show .navbar-nav .nav-item:last-child {
+  margin-bottom: 1rem;
+}
 .cid-sqZRD2kuAH .collapsed .navbar-collapse.collapsing .navbar-buttons,
 .cid-sqZRD2kuAH .collapsed .navbar-collapse.show .navbar-buttons {
   text-align: center;
@@ -11173,6 +11305,10 @@ section.lazy-placeholder:after {
   .cid-sqZRD2kuAH .navbar-collapse.collapsing .navbar-nav .nav-item,
   .cid-sqZRD2kuAH .navbar-collapse.show .navbar-nav .nav-item {
     clear: both;
+  }
+  .cid-sqZRD2kuAH .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+  .cid-sqZRD2kuAH .navbar-collapse.show .navbar-nav .nav-item:last-child {
+    margin-bottom: 1rem;
   }
   .cid-sqZRD2kuAH .navbar-collapse.collapsing .navbar-buttons,
   .cid-sqZRD2kuAH .navbar-collapse.show .navbar-buttons {
